Create main page

--- a/Enginer/home.html
+++ b/Enginer/home.html
@@ -1,32 +1,41 @@
 <!-- home.html -->
 <!DOCTYPE html>
 <html>
+    <link href="css/home.css" rel="stylesheet">
 <head>
-    <title>Инженер-программист</title>
+  <title>Моя страница</title>
 </head>
 <body>
-    <header>
-        <h1>Инженер-программист</h1>
-    </header>
-
-    <nav>
+  <header>
+    <img src="img/logo.jpg" width="64" height="68" alt="Логотип">
+      <h1>Инженер-программист</h1>
+  </header>
+  <main>
+  <section class="desc">
+      <nav class="desc-nav">
         <ul>
             <li><a href="/">Главная</a></li>
             <li><a href="/demand">Востребованность</a></li>
-            <li><a href="/geography">География</a></li>
-            <li><a href="/skills">Навыки</a></li>
-            <li><a href="/latest_vacancies">Последние вакансии</a></li>
+            <li><a href="#">География</a></li>
+            <li><a href="#">Навыки</a></li>
+            <li><a href="#">Последние вакансии</a></li>
         </ul>
-    </nav>
-
-    <main>
-        <h2>Описание профессии</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo velit quis sem facilisis, eu aliquet ex eleifend. Nullam sit amet felis dictum, placerat velit eget, lacinia dolor. Nunc ultricies ornare tortor ac pretium. Sed cursus ipsum quis sem faucibus, in ullamcorper quam ultrices. Vivamus congue nisl a turpis fringilla ullamcorper. Suspendisse elementum bibendum mi, ut consequat nibh commodo et.</p>
-        <img src="img1.jpg" alt="Изображение 1">
-    </main>
-
-    <footer>
-        <p>ФИО и академическая группа</p>
-    </footer>
+      </nav>
+    <section class="desc-description">
+      <h2>Кого называют "Инженер-программист"?</h2>
+        <div class="desc-description-1">
+            <p>Для успешной работы инженер-программист должен обладать глубокими знаниями в области языков программирования, алгоритмов, структур данных, а также иметь опыт работы с различными технологиями разработки. Кроме того, важным навыком является умение работать в команде, коммуникация с заказчиками и другими участниками процесса разработки.<br> Инженер-программист может специализироваться в различных областях разработки, таких как веб-разработка, мобильная разработка, разработка встроенного программного обеспечения, разработка больших данных, машинное обучение и искусственный интеллект, игровая разработка и многие другие.</p>
+            <img src="img/Инженер%201.jpg" height="206" width="314">
+        </div>
+        <div class="desc-description-2">
+            <p>Один из ключевых навыков инженера-программиста - это умение решать сложные задачи и находить эффективные решения для технических проблем. Он должен быть способен анализировать информацию, выявлять причины возникновения ошибок и находить способы их устранения.<br>Инженер-программист также должен следить за последними технологическими тенденциями и новинками в сфере программной инженерии, постоянно совершенствуя свои знания и навыки. Это позволяет ему быть в курсе новых возможностей и выбирать наиболее подходящие инструменты и технологии для решения конкретных задач.<br> В целом, инженер-программист - это высококвалифицированный специалист, играющий важную роль в разработке современного программного обеспечения. Его работа является ключевой для создания инновационных технологических решений и продуктов, которые используются в различных сферах деятельности, от бизнеса до науки и медицины.</p>
+            <img src="img/Инженер%202.jpg" height="206" width="314">
+        </div>
+    </section>
+  </section>
+  </main>
+  <footer>
+    <p>Карасев Михаил Евгеньевич АТ-04</p>
+  </footer>
 </body>
 </html>
